--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,23 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aana = ">=0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
 ruff = "^0.1.5"
+pytest-asyncio = "^0.23.6"
+pytest-dotenv = "^0.5.2"
+pytest-env = "^1.1.3"
+pytest-mock = "^3.12.0"
+pytest-timeout = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+timeout = 600
+env = [
+    "TEST_MODE=True"
+]
