Added tests and updated readme.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "aana_chat_with_video"
 version = "0.1.0"
-description = ""
-authors = ["mobiusml"]
+description = "A multimodal chat application that allows users to upload a video and ask questions about the video content based on the visual and audio information"
+authors = ["Mobius Labs GmbH <dev@mobiuslabs.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
+aana = { git = "https://github.com/mobiusml/aana_sdk.git", branch = "remove_projects" }
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
