--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest-asyncio = "^0.23.6"
 pytest-dotenv = "^0.5.2"
 pytest-env = "^1.1.3"
 pytest-mock = "^3.12.0"
+pytest-postgresql = "6.0.0"
 pytest-timeout = "^2.2.0"
 
 [build-system]
