--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aana = ">=0.2.2.2"
+aana = {git = "https://github.com/mobiusml/aana_sdk.git", rev = "91de5b5"}
+vllm = "0.6.3.post1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
